WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
249467
Stopped RunLoop::DispatchTimer leaks on Cocoa
https://bugs.webkit.org/show_bug.cgi?id=249467
Summary
Stopped RunLoop::DispatchTimer leaks on Cocoa
Kimmo Kinnunen
Reported
2022-12-16 05:01:10 PST
Stopped RunLoop::DispatchTimer leaks on Cocoa It leaks on all platforms.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-16 05:02:05 PST
<
rdar://problem/103443593
>
Kimmo Kinnunen
Comment 2
2022-12-16 05:33:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7748
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug