Stopped RunLoop::DispatchTimer leaks on Cocoa https://bugs.webkit.org/show_bug.cgi?id=249467 rdar://problem/103443593

Reviewed by NOBODY (OOPS!).

auto task = someRunLoop().dispatchAfter(1_s, []{});
task->stop();

This would leak, since the ref to the task is also held by the inner
dispatch lambda until the timer fires.

The result of dispatchAfter is intended to be fully thread-safe as
it is ThreadSafeRefCounted and there's no other way to create thread-safe
timers in WebKit.

The existing implementation could not be fixed, as it relied on the
fact that the object leaks. If the leak would be removed, the timer
invocation would not be thread-safe and DispatchTimer::fired() dispatches
would be made to already stop() ed and thus destroyed instances.

Fix by:
 - Changing the name from DispatchTimer to DelayedDispatch. It's not
   a timer from the caller's perspective.
 - Only expose the relevant operation, e.g. the operation to potentially
   cancel the dispatched task. Call this invalidate() to match other
   similar functionality. It is not cancel, as it won't cancel if
   the call is already ongoing. Previously unintended TimerBase
   functionality was exposed, and this was already being misused.
 - Implement directly on top of the thread-safe platform timer.
   Before, the implementation spent effort to use TimerBase which
   accrued the bugs of that class.
 - Capture the caller dispatchAfter lambda directly into the
   block that will be called by the timer. This way there is
   no double wrapping Function<> in Function<> as previously.

* Source/JavaScriptCore/JavaScriptCore.xcodeproj/project.pbxproj:
Make 'jsc' depend on Foundation. It now uses RetainPtr<CFRunLoopTimerRef>
and as such will call CFRelease().

* Source/JavaScriptCore/runtime/WaiterListManager.cpp:
(JSC::WaiterListManager::waitImpl):
* Source/JavaScriptCore/runtime/WaiterListManager.h:
* Source/WTF/wtf/RunLoop.cpp:
(WTF::RunLoop::dispatchAfter): Deleted.
* Source/WTF/wtf/RunLoop.h:
(WTF::RunLoop::dispatchAfter):
* Source/WTF/wtf/cf/RunLoopCF.cpp:
(WTF::RunLoop::dispatchBlockAfter):
(WTF::RunLoop::DelayedDispatch::invalidate):
* Source/WTF/wtf/generic/RunLoopGeneric.cpp:
(WTF::RunLoop::runImpl):
(WTF::RunLoop::dispatchFunctionAfter):
* Tools/TestWebKitAPI/Tests/WTF/RunLoop.cpp:
(TestWebKitAPI::TEST):